# blog-december-2020

./: CMakeLists.txt  README.md
src/: main.cpp
src/websocket/: connect_options.hpp  connection.cpp  connection.hpp  connection_impl.cpp  connection_impl.hpp  event.cpp  event.hpp  message.cpp  message.hpp  variant_websocket.cpp  variant_websocket.hpp
